# xedit-app

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  libs.versions.toml  settings.gradle.kts
alerter/: build.gradle.kts
alerter/src/main/: AndroidManifest.xml
alerter/src/main/kotlin/io/github/module/alerter/: Alert.kt  Alerter.kt  OnHideAlertListener.kt  OnShowAlertListener.kt  SwipeDismissTouchListener.kt
alerter/src/main/kotlin/x/github/module/alerter/: Alert.kt  Alerter.kt  OnHideAlertListener.kt  OnShowAlertListener.kt  SwipeDismissTouchListener.kt
alerter/src/main/res/drawable/: ic_alerter_face.xml  ic_alerter_notifications.xml
alerter/src/main/res/layout/: alerter_layout.xml
alerter/src/main/res/values/: styles.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: filetypes.json  licenses.json  privacy_policy_cn.txt  treesitter.json
app/src/main/kotlin/io/github/code/app/: MyApplication.kt
app/src/main/kotlin/x/code/app/: AppSettings.kt  MyApplication.kt
app/src/main/kotlin/x/code/app/activity/: BaseActivity.kt  CrashActivity.kt  EditorActivity.kt  EditorService.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/kotlin/x/code/app/model/: BaseAdapter.kt  DatabaseManager.kt  DownloadManager.kt  MainViewModel.kt  SimpleItemCallback.kt  Span.kt  TreeSitter.kt  XDividerItemDecoration.kt
app/src/main/kotlin/x/code/app/preference/: MaterialListPreference.kt  MaterialSwitchPreference.ktx
app/src/main/kotlin/x/code/app/util/: AppUtils.kt  DeviceUtils.kt  FileUtils.kt  JsonUtils.kt  PackageUtils.kt
app/src/main/kotlin/x/code/app/view/: ContentTranslatingDrawerLayout.kt  HScrollView.kt  HighlightTextView.kt  InterceptableDrawerLayout.kt  ViewLifecycleDelegate.kt
app/src/main/res/drawable/: baseline_android_24.xml  baseline_folder_24.xml  baseline_insert_drive_file_24.xml  baseline_keyboard_arrow_right_24.xml  baseline_security_24.xml  ic_about.xml  ic_add_file.xml  ic_add_folder.xml  ic_arrow_down.xml  ic_arrow_drop_down.xml  ic_arrow_drop_up.xml  ic_arrow_up.xml  ic_blance.xml  ic_bug_report.xml  ic_chevron_left.xml  ic_chevron_right.xml  ic_close.xml  ic_code.xml  ic_content_copy.xml  ic_copyright.xml  ic_delete.xml  ic_done_all.xml  ic_expand_less.xml  ic_expand_more.xml  ic_favorite.xml  ic_favorite_off.xml  ic_file.xml  ic_find_replace.xml  ic_folder.xml  ic_github.xml  ic_hyperlink.xml  ic_more_vert.xml  ic_navigation.xml  ic_read_only.xml  ic_read_write.xml  ic_redo.xml  ic_rename.xml  ic_restart_alt.xml  ic_save.xml  ic_search.xml  (+5 more)
app/src/main/res/layout/: activity_crash.xml  activity_crash_handle.xml  activity_editor.xml  activity_main.xml  activity_settings.xml  app_bar_main.xml  app_crash_alert.xml  bottom_sheet_download_treesitter.xml  bottom_sheet_pref_copyright.xml  bottom_sheet_search_view.xml  content_main.xml  dialog_document_input.xml  dialog_request_permission.xml  dialog_search_replace_text.xml  dialog_slider_textsize.xml  download.xml  fragment_crash_report.xml  item_extra_key.xml  item_file.xml  nav_drawer_end.xml  recyclerview_item_copyright_list.xml  recyclerview_item_download_treesitter.xml  recyclerview_item_horiz_filelist.xml  recyclerview_item_shortcut_key.xml  recyclerview_item_vert_filelist.xml
app/src/main/res/menu/: activity_crash_handle.xml  activity_main_drawer.xml  file_action_menu.xml  horiz_popup_menu.xml  main.xml  searchview_more_options.xml  vert_popup_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: string.xml
app/src/main/res/xml/: editor_preferences.xml  paths_provider.xml  root_preferences.xml
bypass/: build.gradle.kts
bypass/src/main/: AndroidManifest.xml
bypass/src/main/cpp/: CMakeLists.txt  bypass.cpp
bypass/src/main/kotlin/io/github/module/bypass/: BypassProvider.kt  JNI.kt  Reflection.kt
bypass/src/main/kotlin/x/github/module/bypass/: JNI.kt  (+2 more)
crash/: build.gradle.kts
crash/src/main/: AndroidManifest.xml
crash/src/main/cpp/: CMakeLists.txt  crashreport.cpp  log.h  main.cpp  stacktrace.cpp  stacktrace.h  stringprintf.cpp  stringprintf.h  utils.cpp  utils.h
document/: build.gradle.kts
editor/: build.gradle.kts  consumer-rules.pro
editor/src/main/res/drawable/: ic_horiz_scrollbar_thumb.xml  ic_magnifier_overlay.xml  ic_scrollbar_track.xml  ic_text_cursor_material.xml  ic_text_select_handle_left.xml  ic_text_select_handle_middle.xml  ic_text_select_handle_right.xml  ic_vert_scrollbar_thumb.xml  scrollbar_state_lists.xml
editor/src/main/res/menu/: action_mode_menu.xml
editor/src/main/res/values/: strings.xml
editor/src/main/res/values-zh/: strings.xml
piecetable/: build.gradle.kts
treesitter/: build.gradle.kts  get_sources.py  repos.json
treesitter/src/main/cpp/: CMakeLists.txt  jni_helper.cpp  jni_helper.h  ts_language.cpp  ts_language.h  ts_lookahead_iterator.cpp  ts_node.cpp  ts_parser.cpp  ts_query.cpp  ts_tree.cpp  ts_tree_cursor.cpp  ts_utils.h
treeview/: build.gradle.kts
(+101 files in other folders)
